6.2.3 swagger categories added
