# Backend/app/routes/categoriesRoute.js
@@ -3,9 +3,9 @@ const router = express.Router();
 const categoriesController = require("../controllers/categoriesController");
 
 router.post("/categories", categoriesController.createCategory);
-router.get("/categories", categoriesController.getCategory);
+router.get("/all-categories", categoriesController.getCategory);
 router.get("/categories/:id", categoriesController.getCategoryById);
-router.put("/categories/:id", categoriesController.updateCategory);
-router.delete("/categories/:id", categoriesController.deleteCategory);
+router.put("/update-category/:id", categoriesController.updateCategory);
+router.delete("/delete-category/:id", categoriesController.deleteCategory);
 
 module.exports = router;
