# Backend/app/routes/productsRoute.js
@@ -3,10 +3,10 @@ const router = express.Router();
 const productsController = require("../controllers/productsControler");
 
 router.post("/products", productsController.createProduct);
-router.get("/products", productsController.getProducts);
-router.get("/products/:id", productsController.getProductById);
-router.get("/products/category/:categoryId", productsController.getProductsByCategory);
-router.put("/products/:id", productsController.updateProduct);
-router.delete("/products/:id", productsController.deleteProduct);
+router.get("/all-products", productsController.getProducts);
+router.get("/product/:id", productsController.getProductById);
+router.get("/products/category/:category-id", productsController.getProductsByCategory);
+router.put("/update-product/:id", productsController.updateProduct);
+router.delete("/delete-product/:id", productsController.deleteProduct);
 
 module.exports = router;
